--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -38,7 +38,7 @@
         <p-button icon="esri-icon-measure" [style]="{'background-color': '#E18230', 'border-color': '#E18230'}"
           title="Tomar medidas" (onClick)="openMeasuringTools()">
         </p-button>
-        <p-button icon="esri-icon-cursor-filled" [style]="{'background-color': '#D75C31', 'border-color': '#D75C31'}"
+        <p-button icon="fa fa-hand-pointer-o" [style]="{'background-color': '#D75C31', 'border-color': '#D75C31'}"
           title="Seleccionar" (click)="openSelectionTool()"></p-button>
         <p-button icon="esri-icon-description" [style]="{'background-color': '#CC3D36', 'border-color': '#CC3D36'}"
           title="Identificar" (onClick)="openEnabledPopup()">
