Ajuste: Cambio de estilo a la tabla de atributos}

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -455,3 +455,14 @@ p-sidebar {
     display: initial;
   }
 }
+
+thead {
+  position: relative;
+  display: block;
+}
+
+tbody {
+  display: block;
+  height: 400px;
+  overflow: auto;
+}
