Ajuste: Cambio de posición de la imagen de Ministerio de Minas

--- a/src/app/dialog-about/dialog-about.component.html
+++ b/src/app/dialog-about/dialog-about.component.html
@@ -6,8 +6,8 @@
     Copyright © 2013-2020
   </div>
   <div class="image">
-    <img src="assets/logo-anh-p.png">
-    <br>Vicepresidencia Técnica
+    <img src="assets/logo-anh-colombia.png">
+    <p>Vicepresidencia Técnica</p>
   </div>
   <div class="design">
     Diseño y Desarrollo <br>
@@ -15,6 +15,9 @@
     <br>
     <a href="http://www.sueje.edu.co/" target="_blank">SUEJE</a>
   </div>
+</div>
+<div class="about">
+  <img src="assets/mineria.png">
 </div>
 <p-message id="infoMedicion" severity="info" text="Versión del Geovisor y Datos del Desarrollador <br>
   Usa el botón X arriba para cerrar esta ventana."></p-message>
