--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -70,7 +70,7 @@
 <!-- Fin del div contenedor del mapa -->
 
 <!-- Tierra Slider del mapa -->
-<div id="ts-tierras-wrapper" *ngIf="!errorArcgisService" align="center">
+<div id="ts-tierras-wrapper" class="esri-widget esri-component" *ngIf="!errorArcgisService" align="center">
   <div class="ts-bg">
     <div id="ts-tierras" class="ui-slider-orange">
       <div class="ts-label">{{nameLayer}}</div>
